syntax = "proto3";

package payment;

option go_package = "github.com/asmile1559/dyshop/pb/backend/payment;payment";

service PaymentService {
  rpc Charge(ChargeReq) returns (ChargeResp) {}
}

message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}

message ChargeReq {
  string transaction_id = 1;
  CreditCardInfo credit_card = 2;
  string final_price = 3;
}

message ChargeResp {
  string transaction_id = 1;
}